--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "astro dev",
     "host": "astro dev --host",
     "build": "astro build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -14,5 +16,8 @@
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.1",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
