--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "host": "astro dev --host",
     "build": "astro build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "preview": "astro preview",
     "astro": "astro"
   },
