--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.1",
+    "preact": "^10.15.1",
     "tailwindcss": "^3.3.2"
   }
 }
