--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.2.1",
+    "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "astro": "^2.5.1",
-    "preact": "^10.15.1",
+    "astro-icon": "^0.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
   }
 }
