--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "astro-blog",
+  "name": "lukkadd.github.io",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "code . && astro dev",
     "start": "astro dev",
     "host": "astro dev --host",
     "build": "astro build",
@@ -11,15 +11,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^2.2.1",
     "@astrojs/react": "^2.2.1",
-    "@astrojs/tailwind": "^3.1.3",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "astro": "^2.5.1",
+    "@astrojs/tailwind": "^4.0.0",
+    "@phosphor-icons/react": "^2.0.10",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "astro": "^2.7.0",
     "astro-icon": "^0.8.1",
+    "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
+  },
+  "overrides": {
+    "semver": "^7.5.3"
   }
 }
