--- a/package.json
+++ b/package.json
@@ -11,19 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.2.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@phosphor-icons/react": "^2.0.10",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "astro": "^2.7.0",
-    "astro-icon": "^0.8.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.4.0",
+    "astro-icon": "^1.1.0",
     "fuse.js": "^6.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "node-html-parser": "^6.1.12",
     "tailwindcss": "^3.3.2"
-  },
-  "overrides": {
-    "semver": "^7.5.3"
   }
 }
