--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^3.0.0",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.4.0",
+    "astro": "^4.8.6",
     "astro-icon": "^1.1.0",
     "fuse.js": "^6.6.2",
     "node-html-parser": "^6.1.12",
