--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "lukkadd.github.io",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "code . && astro dev",
-    "start": "astro dev",
-    "host": "astro dev --host",
+    "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.2.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@phosphor-icons/react": "^2.0.10",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "astro": "^2.7.0",
-    "astro-icon": "^0.8.1",
-    "fuse.js": "^6.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
-  },
-  "overrides": {
-    "semver": "^7.5.3"
+    "@tailwindcss/vite": "^4.1.4",
+    "astro": "^5.7.4",
+    "tailwindcss": "^4.1.4"
   }
 }
